feat(core): harden operation lifecycle failure handling